CHANGES.txt - 04/23/2005
------------------------

CHANGES IN HTMLDOC v1.8.25

    NEW FEATURES

	- Added "--overflow" and "--no-overflow" command-line
	  options to show or hide the content-too-large errors;
	  the default is "--no-overflow".
	- Added "--header1" command-line option and "HEADER1"
	  page comments to set the page header for the first page
	  of each chapter.

    BUG FIXES

	- "$HFIMAGEn" didn't work in a header/footer string.
	- HTMLDOC could crash when rendering a table.
	- Book files were not used in CGI mode (STR #69)
	- Cookies were not sent in HTTP requests (STR #71)
	- Table cells were not aligned properly when the ROWSPAN
	  attribute was set to 1 (STR #73)
	- HTMLDOC crashed when rendering unresolved hyperlinks in
	  aligned images (STR #62)
	- Documented the HTMLDOC_NOCGI environment variable (STR
	  #63)
	- HTMLDOC sometimes crashed when rendering tables with
	  background colors (STR #65)
	- HTMLDOC would crash when writing encrypted strings
	  longer than 1024 bytes (STR #66)


CHANGES IN HTMLDOC v1.8.24

    NEW FEATURES

	- HTMLDOC now provides limited cookie support via the
	  "--cookies" command-line option and via the cookies
	  passed by a browser in CGI mode.
	- HTMLDOC now features a CGI mode which provides PDF
	  conversion functionality for web servers.
	- HTMLDOC now generates a document outline for each
	  input file or URL in webpage mode; the outline shows
	  the title for the file and links to the first page
	  containing that file.
	- HTMLDOC now offers an "htmlsep" output type which
	  generates HTML output with a separate file for each
	  heading in the table of contents.
	- HTMLDOC now includes LINK elements in generated HTML
	  so that intelligent browsers like Mozilla can show
	  next/prev/contents/top buttons.
	- HTMLDOC now supports the BORDERCOLOR attribute for
	  tables, a MSIE extension.
	- The "strict HTML" mode now reports unresolved local
	  links.
	- Added support for HP LaserJet 5000 and Xerox DocuPrint